--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -5,4 +5,6 @@ Classroom Info
 </p>
 
 Here is a list of our students
+<% Student.all.each do |student| %>
 <%= render partial: "students/student", locals: {students: @students, student: @student} %>
+<% end %>
