--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -1,10 +1,5 @@
 Classroom Info
-<p>
-<%= @classroom.course_name %>
-<%= @classroom.semester %>
-</p>
-
-Here is a list of our students
-<% Student.all.each do |student| %>
-<%= render partial: "students/student", locals: {students: @students, student: @student} %>
+<%= render partial: 'classroom', locals: {classroom: @classroom} %>
+<%= @classroom.students.each do |student| %>
+  <%= render partial: 'students/student', locals: {student:@student} %>
 <% end %>
